# UserServiceApp-internship-

./: .gitignore  .gitlab-ci.yml  APIUserService.yaml  Dockerfile  Dockerfile_tests  README.md  docker-compose.yaml  docker-compose_tests.yaml  pyproject.toml
UserServiceApp/: database.py  main.py  models.py  test_main.py
UserServiceApp/schemas/: schemas.py
UserServiceApp/tests/: test_db_connection.py  test_main.py  test_redis_connection.py
hooks/: commit-msg  pre-commit  pre-receive  prepare-commit-msg
