[tool.poetry]
name = "userserviceapiapp"
version = "0.1.0"
description = "API application for User Service using FastAPI framework."
authors = ["Mateusz Kuczynski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.81.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.0"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
