[tool.poetry]
name = "userserviceapiapp"
version = "0.1.0"
description = "API application for User Service using FastAPI framework."
authors = ["Mateusz Kuczynski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
databases = "^0.6.1"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.8"
pytest-cov = "^3.0.0"
fastapi-redis-cache = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.0"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
